--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
     <title>Evolvers Career Clinic</title>
     <!-- Favicons -->
     <link href="assets/img/favi.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/fav.png" rel="apple-touch-icon" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
