Fix download button issue

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a
                   href="https://ananthu-in.stores.instamojo.com/product/4413075/quick-resume-guide/"
                   target="_blank"
-                  class="glightbox btn-watch-video d-flex align-items-center"
+                  class=" btn-watch-video d-flex align-items-center"
                   ><i class="bi bi-arrow-down-circle-fill"></i
                   ><span>Download The Ultimate Resume Guide</span></a
                 >
