--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   ><i class="bi bi-whatsapp"></i>WhatsApp Us Now</a
                 >
                 <a
-                  href="https://ananthu-in.stores.instamojo.com/product/4413075/quick-resume-guide/"
+                  href="https://ananthu-in.myinstamojo.com/product/the-ultimate-resume-guide"
                   target="_blank"
                   class=" btn-watch-video d-flex align-items-center"
                   ><i class="bi bi-arrow-down-circle-fill"></i
